2001-08-06  Larry Ewing  <lewing@ximian.com>

	* htmlclue.c (op_helper): don't segfault in the assertion if the
	clue is empty.

2001-08-03  Radek Doulik  <rodo@ximian.com>

	* htmlengine.h: added block_selection flag

	* htmlselection.c (html_engine_activate_selection): test for
	block_selection
	(html_engine_block_selection): new helper function
	(html_engine_unblock_selection): ditto

	* htmlengine-edit-cut-and-paste.c (delete_object): send delete
	event
	(insert_empty_paragraph): replace empty text in new empty flow by
	text with current style

	* gtkhtml.c (gtk_html_editor_event): new helper function

	* gtkhtml-enums.h: added GTK_HTML_EDITOR_EVENT_DELETE

2001-08-02  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (table_set_bg_color): use gdk_color_copy
	and gdk_color_free instead of g_new and g_free

	* htmltablecell.c (save): save BACKGROUND as well

	* htmlobject.c (html_object_get_cursor): make cursor of non-text
	objects be at least 10 points high

2001-07-31  Larry Ewing  <lewing@ximian.com>

	* htmltable.c: wrap debug ouput with #ifdef GTKHTML_DEBUG_TABLE

	* htmlengine-edit-cut-and-paste.c: wrap debug ouput with #ifdef GTKHTML_DEBUG_TABLE

	* htmltextslave.c (draw_highlighted): remove debugging output.

2001-07-31  Radek Doulik  <rodo@ximian.com>

	* htmlfontmanager.c (html_font_set_init): use memset rather than
	bzero

	* htmlengine-edit-cursor.c (html_engine_hide_cursor): don't draw
	cursor here

	* htmltext.c (get_cursor_base): set base to Text coordinates if
	there are no slaves
	(get_cursor): if there are no slaves, use Text ascent/descent
	(html_text_op_cut_helper): remove text slaves
	(remove_text_slaves): new extracted function
	(fit_line): use remove_text_slaves

2001-07-30  Larry Ewing  <lewing@ximian.com>

	The following is a patch from Damian Ivereigh <damian@cisco.com>
	it has only the slight modification of moving the new members into
	the priv structure rather than the public one.
	