@@ -1,3 +1,7 @@
+2001-08-07  Radek Doulik  <rodo@ximian.com>
+
+	* htmlcluev.c (check_point): fix for padding != 0
+
 2001-08-06  Larry Ewing  <lewing@ximian.com>
 
 	* htmlclue.c (op_helper): don't segfault in the assertion if the
